# nix-python-poetry

./: README.md  pyproject.toml  shell.nix
my_project/: cli.py  main.py
