[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["heiskane <henipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[tool.poetry.scripts]
cli_script = "my_project.cli:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
